@@ -1,7 +1,4 @@
 # This file is automatically generated after the make install step.
-# If you reinstall an Extrae package to a different location/system
-# you can either modify these values by hand or execute the 
-# $EXTRAE_HOME/bin/extrae-post-installation-upgrade.sh script
 
 EXTRAE_HOME=@sub_PREFIXDIR@
 MPI_HOME=@sub_MPI_HOME@
