@@ -2,6 +2,7 @@
 ChangeLog
  [ + added, - removed, * changed ]
  * 21Oct2015 Fixed visibility of the on-line API routines that are called from the wrappers
+             Fix example installation. Use cp instead of ln -s.
  * 15Oct2015 Code adapted to use Synapse libraries v2.0 instead of the older version libMRNetApp
  * 13Oct2015 Fix parametrization of clCreateKernelsInProgram
  * 05Oct2015 Adding support for MPI3 immediate collectives
